src/test/deca/context/valid/class/class_extends_object.deca
/// Description:
// 	  Test when specifying that a class extends Object superclass
// 	
// Resultats:
// 	  ok
// Historique:
// 	  cree le 19/01/2023

class A extends Object {
    
}